--- a/index.html
+++ b/index.html
@@ -1,2 +1,23 @@
 <html>
-skjdsdjsjsds :)
+<head>
+<title> Lab 3 </title>
+</head>
+<body>
+<h1> <i> CONCEPTUAL </i></H1>
+<p><h4> Welcome to Conceptual! It is a store that sells clothes, fan merch, bags, and other trendy items. But we are known for our customizing service of phone cases. Here is a list on the price range of our items: </h4></p>
+<ul style="list-style-type:disc">
+	<li> Tees - 150-200 </li>
+	<li> Matching Shirt and Short clothing - 300-400 </li>
+	<li> String Bags - 180 </li>
+	<li> Phone Cases(Customizable) - 250-400 </li>
+	<li> Bands/Boygroups Posters - 25 </li>
+	<li> Button Badges - 50-75 </li>
+</ul>
+<p> Visit us for more! Here are our branches:
+<ol type="i">
+	<li> Ayala Center Cebu, Ground Floor </li>
+	<li> Parkmall Cebu, 2nd Floor Bazaar </li>
+	<li> The Greenery, 3rd Floor </li>
+</ol>
+</body>
+</html>
