--- a/index.html
+++ b/index.html
@@ -1,23 +1,24 @@
 <html>
 <head>
-<title> Lab 3 </title>
+<title> Lab 4 </title>
 </head>
-<body>
-<h1> <i> CONCEPTUAL </i></H1>
-<p><h4> Welcome to Conceptual! It is a store that sells clothes, fan merch, bags, and other trendy items. But we are known for our customizing service of phone cases. Here is a list on the price range of our items: </h4></p>
-<ul style="list-style-type:disc">
-	<li> Tees - 150-200 </li>
-	<li> Matching Shirt and Short clothing - 300-400 </li>
-	<li> String Bags - 180 </li>
-	<li> Phone Cases(Customizable) - 250-400 </li>
-	<li> Bands/Boygroups Posters - 25 </li>
-	<li> Button Badges - 50-75 </li>
-</ul>
-<p> Visit us for more! Here are our branches:
-<ol type="i">
-	<li> Ayala Center Cebu, Ground Floor </li>
-	<li> Parkmall Cebu, 2nd Floor Bazaar </li>
-	<li> The Greenery, 3rd Floor </li>
-</ol>
+<body style="background-color:mistyrose;">
+<center>
+	<h1> <i> 
+	<br> <br> <br> CONCEPTUAL </i></h1>
+	<p> <font size="5"> Welcome! Conceptual is an "everything-indie" store." Click the links below to see our items. </p>
+	<br> <a href=""> shirts</a>
+	<br> <a href=""> vinyls &amp; albums</a>
+	<br> <a href=""> accessories</a>
+</center>
+<font size="3">
+	<div style="position: fixed; bottom: 0; width:100%; text-align: left">
+		Visit us for more! Here are our branches:
+		<ol type="i">
+			<li> Ayala Center Cebu, Ground Floor </li>
+			<li> Parkmall Cebu, 2nd Floor Bazaar </li>
+			<li> The Greenery, 3rd Floor </li>
+		</ol>
+	</div>
 </body>
 </html>
