--- a/index.html
+++ b/index.html
@@ -7,9 +7,9 @@
 	<h1> <i> 
 	<br> <br> <br> CONCEPTUAL </i></h1>
 	<p> <font size="5"> Welcome! Conceptual is an "everything-indie" store." Click the links below to see our items. </p>
-	<br> <a href=""> shirts</a>
-	<br> <a href=""> vinyls &amp; albums</a>
-	<br> <a href=""> accessories</a>
+	<br> <a href="lab4Shirts.html"> shirts</a>
+	<br> <a href="lab4Vinyls.html"> vinyls &amp; albums</a>
+	<br> <a href="lab4Accessories.html"> accessories</a>
 </center>
 <font size="3">
 	<div style="position: fixed; bottom: 0; width:100%; text-align: left">
