--- a/index.html
+++ b/index.html
@@ -4,8 +4,8 @@
 </head>
 <body style="background-color:mistyrose;">
 <center>
-	<h1> <i> 
-	<br> <br> <br> CONCEPTUAL </i></h1>
+	<img src="https://cdn1.thehunt.com/app/public/system/note_images/3330443/note_preview/1b786a58459d5410ccc60600306e27a7.png" height="132" width="132"> 
+	<h1> <i> CONCEPTUAL </i> </h1>
 	<p> <font size="5"> Welcome! Conceptual is an "everything-indie" store." Click the links below to see our items. </p>
 	<br> <a href="lab4Shirts.html"> shirts</a>
 	<br> <a href="lab4Vinyls.html"> vinyls &amp; albums</a>
