--- a/lab4Accessories.html
+++ b/lab4Accessories.html
@@ -5,8 +5,8 @@
 <body style="background-color:mistyrose;">
 <center>
 	<h1> TOTE BAGS - PHP 250 <br>
-	<br> <img src="https://mail.google.com/mail/u/0/?ui=2&ik=8c7e9f6c31&view=fimg&th=15afba31ffdcafd6&attid=0.4&disp=emb&realattid=15afba20cd6910b3ca13&attbid=ANGjdJ8TRDxV82kV3FAhZSKsolc4nWXJOy8AyPrcxRfw3X-d3tzjTb6Ok6x8Ga09pB1qZcB9oS-A9RVkEShiXYyjPIv-sEa8lRpwsSCGRN86PmHykdIbhGTAPyTq00s&sz=s0-l75-ft&ats=1490282098456&rm=15afba31ffdcafd6&zw&atsh=1" height="332" width="332">
-	<img src="https://mail.google.com/mail/u/0/?ui=2&ik=8c7e9f6c31&view=fimg&th=15afba31ffdcafd6&attid=0.7&disp=emb&realattid=15afba2073c112d2d822&attbid=ANGjdJ-nvEkmZzwPuDsC8yG5z3E2JG8q87a3nQb8gfAive50SyGTlA0Zw0qDrA2usys7cQJMR0qL0ZOFBzN7pD6qgCJDFEI05Mab6Gz5a1knd-hGCaJ1IGAXRaGHBeU&sz=s0-l75-ft&ats=1490282098456&rm=15afba31ffdcafd6&zw&atsh=1" height="332" width="332">
+	<br> <img src="tote bag1.jpg" height="332" width="332">
+	<img src="tote bag2.jpg" height="332" width="332">
 	<br> <br> PINS - PHP 80 <br> 
 	<br> <img src="http://thumbs.ebaystatic.com/images/m/mqvXxdU3d74K3fLlra67RQA/s-l225.jpg" height="332" width="332">
 	<img src="https://mail.google.com/mail/u/0/?ui=2&ik=8c7e9f6c31&view=fimg&th=15afbd10e3f71964&attid=0.1.1&disp=emb&attbid=ANGjdJ_qkH88MXDXXQ8L8dNa70_w9VhdKFQ_WCycVDVTzmjDVcbkwrdX98UmvOH8kGX0hg9vpb0ZGbuevxkYRbk6-B__A0qm6s4z0prHr9U1Vq3SF3jqV-rj72HpTO0&sz=s0-l75-ft&ats=1490283477099&rm=15afbd10e3f71964&zw&atsh=1" height="332" width="332">
