--- a/lab4Accessories.html
+++ b/lab4Accessories.html
@@ -9,7 +9,7 @@
 	<img src="tote bag2.jpg" height="332" width="332">
 	<br> <br> PINS - PHP 80 <br> 
 	<br> <img src="http://thumbs.ebaystatic.com/images/m/mqvXxdU3d74K3fLlra67RQA/s-l225.jpg" height="332" width="332">
-	<img src="https://mail.google.com/mail/u/0/?ui=2&ik=8c7e9f6c31&view=fimg&th=15afbd10e3f71964&attid=0.1.1&disp=emb&attbid=ANGjdJ_qkH88MXDXXQ8L8dNa70_w9VhdKFQ_WCycVDVTzmjDVcbkwrdX98UmvOH8kGX0hg9vpb0ZGbuevxkYRbk6-B__A0qm6s4z0prHr9U1Vq3SF3jqV-rj72HpTO0&sz=s0-l75-ft&ats=1490283477099&rm=15afbd10e3f71964&zw&atsh=1" height="332" width="332">
+	<img src="pin.jpg" height="332" width="332">
 	<img src="http://d2ydh70d4b5xgv.cloudfront.net/images/6/1/twenty-one-pilots-set-of-6-pins-buttons-21-band-blurryface-emotional-roadshow-5024a975a17faf380f13f0ba2e9854c8.jpg" height="332" width="332">
 	<br> <br> BALLERS - PHP 50 </h1> <br>
 	<img src="https://s-media-cache-ak0.pinimg.com/736x/d7/8f/ed/d78fedb610f3eca5685b8c37af4b8f4e.jpg" height="332" width="332">
